# sorting_library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  annotated.html  annotated_dup.js  bubble_8c.html  bubble_8c.js  bubble_8c__incl.map  bubble_8c__incl.md5  bubble_8c_a6934c940aaa57f08febf595e659a2b6a_cgraph.md5  bubble_8c_source.html  classes.html  dir_000000_000002.html  dir_000001_000002.html  dir_000003_000002.html  dir_2cf9104c0014c1a01c353bc4ef26dcea.html  dir_2cf9104c0014c1a01c353bc4ef26dcea.js  dir_2cf9104c0014c1a01c353bc4ef26dcea_dep.map  dir_2cf9104c0014c1a01c353bc4ef26dcea_dep.md5  dir_5837d5360f1b063d13c915b158289dbf.html  dir_5837d5360f1b063d13c915b158289dbf.js  dir_5837d5360f1b063d13c915b158289dbf_dep.map  dir_5837d5360f1b063d13c915b158289dbf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e6df591b0639d4c4807ef64d058833e2.html  dir_e6df591b0639d4c4807ef64d058833e2.js  dir_e6df591b0639d4c4807ef64d058833e2_dep.map  dir_e6df591b0639d4c4807ef64d058833e2_dep.md5  efficient__sorts_8h.html  efficient__sorts_8h.js  efficient__sorts_8h__dep__incl.map  (+151 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
docs/: README.md  README1.md
examples/: CMakeLists.txt  examples.c  simple_sorts.c  stud3.c
include/: efficient_sorts.h  simple_sorts.h  sorting.h  sorting_types.h
scripts/: build.sh  generate_docs.sh  run_tests.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js
src/algorithms/efficient/: heapsort.c  introsort.c  mergesort.c  quicksort.c  timsort.c
src/algorithms/simple/: bubble.c  gnome_stooge.c  insertion.c  selection.c  shell.c  utils.c
src/tests/: CMakeLists.txt  test_introsort.c  test_simple_sorts.c  unit_tests.c
src/tests/stud1/: test_introsort.c
